; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_shared.c_Script_Transition.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_shared.c_Script_Transition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Script_Transition(%struct.TYPE_3__* %0, i8** %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8** %1, i8*** %4, align 8
  %10 = load i8**, i8*** %4, align 8
  %11 = call i64 @String_Parse(i8** %10, i8** %5)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %40

13:                                               ; preds = %2
  %14 = load i8**, i8*** %4, align 8
  %15 = call i64 @Rect_Parse(i8** %14, i32* %6)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %39

17:                                               ; preds = %13
  %18 = load i8**, i8*** %4, align 8
  %19 = call i64 @Rect_Parse(i8** %18, i32* %7)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %39

21:                                               ; preds = %17
  %22 = load i8**, i8*** %4, align 8
  %23 = call i64 @Int_Parse(i8** %22, i32* %8)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %39

25:                                               ; preds = %21
  %26 = load i8**, i8*** %4, align 8
  %27 = call i64 @Float_Parse(i8** %26, float* %9)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %39

29:                                               ; preds = %25
  %30 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %31 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = load i8*, i8** %5, align 8
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i32, i32* %8, align 4
  %37 = load float, float* %9, align 4
  %38 = call i32 @Menu_TransitionItemByName(i32 %32, i8* %33, i32 %34, i32 %35, i32 %36, float %37)
  br label %39

39:                                               ; preds = %29, %25, %21, %17, %13
  br label %40

40:                                               ; preds = %39, %2
  ret void
}

declare dso_local i64 @String_Parse(i8**, i8**) #1

declare dso_local i64 @Rect_Parse(i8**, i32*) #1

declare dso_local i64 @Int_Parse(i8**, i32*) #1

declare dso_local i64 @Float_Parse(i8**, float*) #1

declare dso_local i32 @Menu_TransitionItemByName(i32, i8*, i32, i32, i32, float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
